objects/Checklist_de_visita__c.object
<CustomObject>
    <fields>
        <fullName>Orloff__c</fullName>
        <description>Organização e exposição dos produtos nas prateleiras. Somente On trade.</description>
        <label>Orloff</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orloff_visual__c</fullName>
        <label>Orloff (visual)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_visual__c</fullName>
        <label>Other (visual)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <description>Organização e exposição dos produtos nas prateleiras. Somente On trade.</description>
        <label>Others</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outras_Acoes_Descrever02__c</fullName>
        <label>Outras Ações (Descrever)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outras_Acoes_Descrever03__c</fullName>
        <label>Outras Ações (Descrever)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outras_Acoes_Descrever__c</fullName>
        <label>Outras Ações (Descrever)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outros_Motivos__c</fullName>
        <inlineHelpText>Informar outros motivos não citados na lista</inlineHelpText>
        <label>Outros Motivos</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outros_Objetivos__c</fullName>
        <label>Outros Objetivos</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outros_motivos_de_nao_visitar__c</fullName>
        <description>Motivo de não visita quando selecionado &quot;Outros...&quot;. Layout de pagina para todos os check lists.</description>
        <label>Outros motivos de não visitar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Para_cada_marca_de_produtos_da_Pernod_Ri__c</fullName>
        <inlineHelpText>Para cada marca de produtos da Pernod Ricard.</inlineHelpText>
        <label>Para cada marca de produtos da PRB</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participantes__c</fullName>
        <label>Participantes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Confinado__c</fullName>
        <label>Passport Confinado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Passport_Estoque__c</fullName>
        <label>Passport Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passport_Preco_Praticado__c</fullName>
        <label>Passport Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Passport_Qtde_de_Frentes_na_Gondola__c</fullName>
        <label>Passport Qtde de Frentes na Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passport_Quantidade_de_pontos__c</fullName>
        <label>Passport Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passport_Sell_in__c</fullName>
        <label>Passport Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Passport_Sell_out__c</fullName>
        <label>Passport Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passport__c</fullName>
        <description>Organização e exposição dos produtos nas prateleiras. Somente On trade.</description>
        <label>Passport</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Passport_visual__c</fullName>
        <label>Passport (visual)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pedido__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pedido</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Checklist de Visitas</relationshipLabel>
        <relationshipName>Checklist_de_Visitas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pergunta_01__c</fullName>
        <defaultValue>&quot;Chivas 12 está posicionado ao lado de JWBlack?&quot;</defaultValue>
        <description>Chivas 12 está posicionado ao lado de JWBlack?</description>
        <label>Pergunta 01:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Perrier_Jouet__c</fullName>
        <description>Organização e exposição dos produtos nas prateleiras. Somente On trade.</description>
        <label>Perrier-Jouêt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perrier_Jouet_visual__c</fullName>
        <label>Perrier-Jouêt (visual)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postura_correta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possui atendimento de promotor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_o_Concorrente_Anunciado_01__c</fullName>
        <label>Preço</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_o_Concorrente_Anunciado_02__c</fullName>
        <label>Preço</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_o_Concorrente_Anunciado_03__c</fullName>
        <label>Preço</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precisa_de_campanha_de_incentivo__c</fullName>
        <label>Precisa de campanha de incentivo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Precos_anunciados_estao_de_acordo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Preços anunciados estão de acordo com o acordado?</inlineHelpText>
        <label>Preços anunciados estão de acordo?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Produto_01Pernod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto PRB 01</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Checklist de Visitas</relationshipLabel>
        <relationshipName>Checklist_de_Visitas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Produto_02Pernod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto PRB 02</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Checklist de Visitas (Produto 02)</relationshipLabel>
        <relationshipName>Checklist_de_Visitas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Produto_03Pernod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto PRB 03</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Checklist de Visitas (Produto 03)</relationshipLabel>
        <relationshipName>Checklist_de_Visitas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Produto_Concorrente_01__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto Concorrente 01</label>
        <referenceTo>Produto_Concorrente__c</referenceTo>
        <relationshipName>Checklists_de_visita</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Produto_Concorrente_02__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto Concorrente 02</label>
        <referenceTo>Produto_Concorrente__c</referenceTo>
        <relationshipName>Checklists_de_visita1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Produto_Concorrente_03__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto Concorrente 03</label>
        <referenceTo>Produto_Concorrente__c</referenceTo>
        <relationshipName>Checklists_de_visita2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Produtos_Pernod_Ricard_estao_anunciados__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Produtos estão anunciados?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Produtos_e_Materiais_Pergunta_02__c</fullName>
        <defaultValue>&quot;Os Produtos estão precificados corretamente em todas as áreas expostas?&quot;</defaultValue>
        <label>02</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Produtos_e_Materiais_Pergunta_03__c</fullName>
        <defaultValue>&quot;Os Produtos do confinado estão bem expostos e precificados?&quot;</defaultValue>
        <label>03</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Produtos_e_Materiais_Pergunta_04__c</fullName>
        <defaultValue>&quot;Existe algum material de merchandising PRB implementado no PDV?&quot;</defaultValue>
        <label>04</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Produtos_e_Materiais__c</fullName>
        <defaultValue>&quot;Os Produtos/Cartuchos estão limpos e em boas condições de consumo/apresentação?&quot;</defaultValue>
        <label>01</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Projetos_Especiais__c</fullName>
        <description>Projetos especiais para contrapartidas de contrato. Somente para On trade.</description>
        <label>Projetos Especiais</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qtde_Marcas_Tabloide__c</fullName>
        <formula>IF(AND(ISBLANK(LAT_Product1__c),ISBLANK(Produto_01Pernod__c)),0,1)+
IF(AND(ISBLANK(LAT_Product2__c),ISBLANK(Produto_02Pernod__c)),0,1)+
IF(AND(ISBLANK(LAT_Product3__c),ISBLANK(Produto_03Pernod__c)),0,1)+
IF(AND(ISBLANK(LAT_Product4__c),ISBLANK(Produto_04Pernod__c)),0,1)+
IF(AND(ISBLANK(LAT_Product5__c),ISBLANK(Produto_05Pernod__c)),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qtde de Marcas no Tablóide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qtde_fora_do_range__c</fullName>
        <description>Identifica quantos produtos PERNOD informados em Produtos da Concorrência que estão fora do range de preço sugerido no sistema DEMANTRA.</description>
        <label>Qtde fora do range</label>
        <summarizedField>Produto_Concorr_ncia__c.Valor_fora_do_Range__c</summarizedField>
        <summaryForeignKey>Produto_Concorr_ncia__c.Checklist_de_visita__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quais_concorrentes_estao_anunciados__c</fullName>
        <inlineHelpText>Quais concorrentes estão anunciados?</inlineHelpText>
        <label>Quais concorrentes estão anunciados</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quais_produtos_e_respectivos_precos__c</fullName>
        <inlineHelpText>Quais produtos e respectivos preços?</inlineHelpText>
        <label>Quais produtos e respectivos preços</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resultado_atingido_ao_anterior__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Resultado atingido com relação ao objetivo definido na reunião anterior?</inlineHelpText>
        <label>Resultado atingido?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resultado_atingido_com_relacao__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Resultado atingido com relação ao objetivo definido na reunião anterior?</inlineHelpText>
        <label>Resultado atingido?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retirar_Contrato__c</fullName>
        <defaultValue>false</defaultValue>
        <description>informa se retirou o contrato.</description>
        <label>Retirar Contrato ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Royal_Salute__c</fullName>
        <description>Organização e exposição dos produtos nas prateleiras. Somente On trade.</description>
        <label>Royal Salute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Royal_Salute_visual__c</fullName>
        <label>Royal Salute (visual)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sabia_Informar_o_preco_do_produto_drink__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sabia Informar o preço do produto/drink?</inlineHelpText>
        <label>Sabia Informar o preço do produto/drink?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Satisfacao_do_cliente_com_a_acao__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marcar para Sim</inlineHelpText>
        <label>Satisfação com a ação?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serviu_o_drink_de_maneira_correta__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Serviu o drink de maneira correta?</inlineHelpText>
        <label>Serviu o drink de maneira correta?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_da_Visita__c</fullName>
        <formula>Text(Visita__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_de_visita_cliente__c</fullName>
        <label>Status de visita cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tailor_Made__c</fullName>
        <description>Tailor made em contrapartida do contrato. Somente para o layout de On Trade.</description>
        <label>Tailor Made</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teachers_Confinado__c</fullName>
        <label>Teacher´s Confinado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teachers_Estoque__c</fullName>
        <label>Teacher´s Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teachers_Preco_Praticado__c</fullName>
        <label>Teacher´s Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Teachers_Qtde_de_Frentes_na_Gondola__c</fullName>
        <label>Teacher´s Qtde de Frentes na Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teachers_Quantidade_de_pontos__c</fullName>
        <label>Teacher´s Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teachers_Sell_in__c</fullName>
        <label>Teacher´s Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Teachers_Sell_out__c</fullName>
        <label>Teacher´s Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teachers__c</fullName>
        <description>Organização e exposição dos produtos nas prateleiras. Somente On trade.</description>
        <label>Teachers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teachers_visual__c</fullName>
        <label>Teachers (visual)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Não OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telefone__c</fullName>
        <label>Telefone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tempo_Gasto_no_Cliente_Minutos__c</fullName>
        <inlineHelpText>Tempo Gasto na Visita em Minutos</inlineHelpText>
        <label>Tempo Gasto (Min)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tinha_conhecimento_dos_produtos_drinks_l__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tinha conhecimento dos produtos/drinks listados no cardápio?</inlineHelpText>
        <label>Tinha conhecimento dos produtos/drinks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Visita__c</fullName>
        <formula>text(Visita__r.Tipo_de_Visita__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_das_Caixas__c</fullName>
        <description>Total de caixas produtos definidos no contrato. Somente On trade.</description>
        <formula>Caixas_Fisicas_Absolut__c +
 Caixas_Fisicas_Ballantines__c +
 Caixas_Fisicas_Chivas__c +
 Caixas_Fisicas_Havana__c +
 Caixas_Fisicas_Jameson__c +
 Caixas_Fisicas_Montilla__c +
 Caixas_Fisicas_Mumm_Cuvee__c + 
Caixas_Fisicas_Natu_Nobilis__c +
 Caixas_Fisicas_Orloff__c +
 Caixas_F_sicas_Others__c +
 Caixas_Fisicas_Passport__c +
 Caixas_Fisicas_Perrier_Jouet__c +
 Caixas_Fisicas_Royal_Salute__c +
 Caixas_Fisicas_Teachers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total das Caixas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_de_Caixas_Estoque__c</fullName>
        <formula>Estoque_Caixas_Fisicas_Absolut__c +
 Estoque_Caixas_Fisicas_Ballantines__c +
 Estoque_Caixas_Fisicas_Chivas__c +
 Estoque_Caixas_Fisicas_Havana__c +
 Estoque_Caixas_Fisicas_Jameson__c +
 Estoque_Caixas_Fisicas_Montilla__c +
 Estoque_Caixas_Fisicas_Mumm_Cuvee__c +
 Estoque_Caixas_Fisicas_Natu_Nobilis__c +
 Estoque_Caixas_Fisicas_Orloff__c +
 Estoque_Caixas_Fisicas_Others__c +
 Estoque_Caixas_Fisicas_Passport__c +
 Estoque_Caixas_Fisicas_Perrier_Jouet__c +
 Estoque_Caixas_Fisicas_Royal_Salute__c +
 Estoque_Caixas_Fisicas_Teachers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total de Caixas Estoque</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trabalho_de_acordo_com_o_esperado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trabalho de acordo com o esperado?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treinamento_de_consumidores__c</fullName>
        <label>Treinamento de consumidores</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Treinamento_de_vendedores__c</fullName>
        <label>Treinamento de vendedores</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uniforme__c</fullName>
        <description>Uniforma para as contrapartidas do contrato. Somente para layout de On Trade.</description>
        <label>Uniforme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validade_ATE__c</fullName>
        <inlineHelpText>Data Final da Validade</inlineHelpText>
        <label>Até</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validade_DE__c</fullName>
        <inlineHelpText>Data Inicial de Validade</inlineHelpText>
        <label>De</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Venda_de_Garrafa__c</fullName>
        <description>Venda de Garrafa em contrapartida do contrato. Somente para layout de On Trade.</description>
        <label>Venda de Garrafa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visibilidade_de_Produto__c</fullName>
        <description>Visibilidade do produto em contrapartida do contrato. Somente para layout de On Trade.</description>
        <label>Visibilidade de Produto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visita__c</fullName>
        <label>Visita</label>
        <referenceTo>Visitas__c</referenceTo>
        <relationshipLabel>Checklist de Visitas</relationshipLabel>
        <relationshipName>Planos_de_A_o_das_Visitas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Wyborowa_Confinado__c</fullName>
        <label>Wyborowa Confinado?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wyborowa_Estoque__c</fullName>
        <label>Wyborowa Estoque</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wyborowa_Preco_Praticado__c</fullName>
        <label>Wyborowa Preço Praticado</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wyborowa_Qtde_de_Frentes_na_Gondola__c</fullName>
        <label>Wyborowa Qtde de Frentes na Gôndola</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wyborowa_Quantidade_de_pontos__c</fullName>
        <label>Wyborowa Quantidade de pontos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wyborowa_Sell_in__c</fullName>
        <label>Wyborowa Sell-in</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wyborowa_Sell_out__c</fullName>
        <label>Wyborowa Sell-out</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>exp10Sim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sim?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>exp11Sim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sim?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>exp1Sim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sim?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ext01Sim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sim?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ext02Sim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sim?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ext03Sim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sim?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>externalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>informacoes_sobre_a_concorrencia__c</fullName>
        <label>informações sobre a concorrência</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>outros_motivos_venda__c</fullName>
        <label>Outros Motivos</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>p1Sim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sim?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pm01Sim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sim?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pm02Sim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sim?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pm03Sim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sim?</label>
        <type>Checkbox</type>
    </fields>
    <label>Checklist de Visita</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Checklist</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist de Visitas</pluralLabel>
    <recordTypes>
        <fullName>Indireto</fullName>
        <active>false</active>
        <description>Off-Trade Indireto</description>
        <label>Indireto</label>
    </recordTypes>
    <recordTypes>
        <fullName>Off_Trade</fullName>
        <active>false</active>
        <description>Off-Trade Direto</description>
        <label>Off Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>On_Trade</fullName>
        <active>true</active>
        <description>On Trade</description>
        <label>On Trade</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Campo_obrigatorio_de_houve_venda</fullName>
        <active>false</active>
        <description>quando a visita for de vendas os campos de vendas são obrigatórios</description>
        <errorConditionFormula>AND
   (
      NOT(ISBLANK(CreatedDate)),
      OR ( 
         Tipo_de_Visita__c  = &quot;Vendas&quot;, 
         Tipo_de_Visita__c  = &quot;Execução e Venda&quot;  
         ),
    NOT(
         OR(
             Houve_Venda__c,  
             OR  (
                      ISPICKVAL(Motivo_de_nao_venda__c,&apos;01 - preço fora da política acordada&apos;),
                      ISPICKVAL(Motivo_de_nao_venda__c,&apos;02 - excesso de estoque&apos;),
                      ISPICKVAL(Motivo_de_nao_venda__c,&apos;03 - compra no disponível.&apos;),
                      ISPICKVAL(Motivo_de_nao_venda__c,&apos;04 - Outros...&apos;),
                      ISPICKVAL(Motivo_de_nao_venda__c,&apos;05 - outros...&apos;)
                      )
                )
              )
    )</errorConditionFormula>
        <errorDisplayField>Exposi_o_Extra_Pergunta_01__c</errorDisplayField>
        <errorMessage>Para o tipo de visita &quot;Venda&quot; ou &quot;Venda e Execução&quot; é obrigatório o preenchimento dos campos da Seção de  Vendas.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campo_obrigatorio_de_motivo_de_venda</fullName>
        <active>true</active>
        <description>quando o campo motivo de não venda = outros o campo outros é obrigatório</description>
        <errorConditionFormula>AND(ISPICKVAL(  Motivo_de_nao_venda__c  , &quot;05 - outros...&quot;),   ISBLANK(  outros_motivos_venda__c  ) )</errorConditionFormula>
        <errorDisplayField>outros_motivos_venda__c</errorDisplayField>
        <errorMessage>Para a opção &quot;05 - outros...&quot;, o campo Outros Motivos é obrigatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campo_obrigatorio_de_motivo_de_visita</fullName>
        <active>true</active>
        <description>quando o campo motivo de visitar = outros o campo outros motivos é obrigatório</description>
        <errorConditionFormula>AND(ISPICKVAL(   Motivo_de_nao_visitar__c   , &quot;Outros...&quot;),   ISBLANK(   Outros_Motivos__c   ) )</errorConditionFormula>
        <errorDisplayField>Outros_Motivos__c</errorDisplayField>
        <errorMessage>Para a opção &quot;Outros...&quot;, o campo Outros Motivos é obrigatorio</errorMessage>
    </validationRules>
</CustomObject>